--- a/client/dss-itsu/docente.html
+++ b/client/dss-itsu/docente.html
@@ -5,8 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ITSU DSS – Panel Docente</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+  <script src="/auth.js"></script>
+  <script>
+    if (window.SAAAuth) {
+      window.SAAAuth.requireAuth({ allowedRole: 'teacher' });
+      window.SAAAuth.injectLogoutBar();
+    }
+  </script>
   <header>
     <div class="title">Panel del Docente</div>
     <nav>
