--- a/client/teacher-dashboard.html
+++ b/client/teacher-dashboard.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Profesor</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="telemetry.js"></script>
     <style>
         * {
             margin: 0;
@@ -232,6 +234,15 @@
     </style>
 </head>
 <body>
+    <script src="/auth.js"></script>
+    <script>
+        if (window.SAAAuth) {
+            window.SAAAuth.requireAuth({ allowedRole: 'teacher' });
+            window.SAAAuth.injectLogoutBar();
+        }
+        // Telemetría: vista de página
+        if (window.SAATelemetry) { window.SAATelemetry.track('page_view', { page: 'teacher-dashboard' }); }
+    </script>
     <div class="container">
         <div style="background:#fff3cd;border:1px solid #ffeeba;color:#856404;border-radius:10px;padding:12px 16px;margin:16px 0;text-align:left;">
             <strong>Nuevo:</strong> Accede al <a href="/dss-itsu/docente.html" style="color:#2b6cb0;text-decoration:underline;">Panel Docente ECAS</a> con riesgo de deserción y acciones.
@@ -243,7 +254,6 @@
                 <h1>👨‍🏫 Dashboard Profesor</h1>
                 <div class="user-info">
                     <span id="user-name"></span>
-                    <button class="logout-btn" onclick="logout()">Cerrar Sesión</button>
                 </div>
             </div>
 
@@ -487,19 +497,7 @@
             document.getElementById('poor-count').textContent = grades.poor;
         }
 
-        async function logout() {
-            try {
-                // Limpiar datos del almacenamiento local
-                localStorage.removeItem('authToken');
-                localStorage.removeItem('userRole');
-                localStorage.removeItem('userFirstName');
-                localStorage.removeItem('userLastName');
-                window.location.href = '/login.html';
-            } catch (error) {
-                console.error('Error al cerrar sesión:', error);
-                window.location.href = '/login.html';
-            }
-        }
+        // logout gestionado por SAAAuth.logout a través de la barra superior
 
         // Cargar dashboard al iniciar
         loadDashboard();
