--- a/client/student-dashboard.html
+++ b/client/student-dashboard.html
@@ -314,7 +314,9 @@
                     <p>Cargando encuestas...</p>
                 </div>
                 <div style="text-align: center; margin-top: 20px;">
-                    <a href="/survey.html" class="btn">Comenzar Encuesta</a>
+                <div class="info-box" style="background:#f0f4ff;border:1px solid #e0e7ff;border-radius:10px;padding:12px 16px;margin-top:8px;text-align:center;color:#4a5568;">
+                    La página de encuestas fue deshabilitada.
+                </div>
                 </div>
             </div>
         </div>
